# pico_rust_template

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.zed/: settings.toml
src/: main.rs
